--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@visx/group": "1.7.0",
     "@visx/legend": "^2.10.0",
     "@visx/mock-data": "^2.1.2",
+    "@visx/responsive": "^2.10.0",
     "@visx/scale": "1.7.0",
     "@visx/shape": "1.8.0",
     "@visx/text": "1.7.0",
@@ -142,8 +143,8 @@
     "@types/crossfilter": "^0.0.34",
     "@types/d3": "^3.5.46",
     "@types/d3-scale": "^4.0.2",
-    "@types/d3-time": "^3.0.0",
     "@types/d3-shape": "^3.1.0",
+    "@types/d3-time": "^3.0.0",
     "@types/d3-time-format": "^4.0.0",
     "@types/dc": "0.0.29",
     "@types/diff": "^3.5.4",
