--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "@tippyjs/react": "^4.2.6",
     "@visx/axis": "1.8.0",
     "@visx/clip-path": "^2.1.0",
+    "@visx/event": "^2.6.0",
     "@visx/grid": "1.16.0",
     "@visx/group": "1.7.0",
+    "@visx/legend": "^2.10.0",
+    "@visx/mock-data": "^2.1.2",
+    "@visx/responsive": "^2.10.0",
     "@visx/scale": "1.7.0",
     "@visx/shape": "2.12.2",
     "@visx/text": "1.7.0",
+    "@visx/tooltip": "^2.10.0",
     "ace-builds": "^1.4.7",
     "classlist-polyfill": "^1.2.0",
     "classnames": "^2.1.3",
@@ -33,7 +38,10 @@
     "crossfilter": "^1.3.12",
     "cy2": "^1.3.0",
     "d3": "^3.5.17",
-    "d3-scale": "^2.1.0",
+    "d3-array": "^3.1.1",
+    "d3-scale": "^3.3.0",
+    "d3-shape": "^3.1.0",
+    "d3-time-format": "^4.1.0",
     "dc": "2.1.9",
     "diff": "^3.2.0",
     "formik": "^2.2.9",
@@ -135,7 +143,9 @@
     "@types/crossfilter": "^0.0.34",
     "@types/d3": "^3.5.46",
     "@types/d3-scale": "^4.0.2",
+    "@types/d3-shape": "^3.1.0",
     "@types/d3-time": "^3.0.0",
+    "@types/d3-time-format": "^4.0.0",
     "@types/dc": "0.0.29",
     "@types/diff": "^3.5.4",
     "@types/eslint": "7.29.0",
